force-app/main/default/objects/Skill__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Skill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>FInance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AI &amp; DS</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>