force-app/main/default/objects/Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <label>Skill Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>