force-app/main/default/objects/Skill__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <type>Lookup</type>
</CustomField>